added turn and winners display above new game button

--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
 <body>
     <h1>Tic Tac Toe</h1>
     <div class="gameboard">
-        <div class="square s1"></div>
-        <div class="square s2"></div>
-        <div class="square s3"></div>
-        <div class="square s4"></div>
-        <div class="square s5"></div>
-        <div class="square s6"></div>
-        <div class="square s7"></div>
-        <div class="square s8"></div>
-        <div class="square s9"></div>
+        <div class="square s1" id="11"></div>
+        <div class="square s2" id="12"></div>
+        <div class="square s3" id="13"></div>
+        <div class="square s4" id="21"></div>
+        <div class="square s5" id="22"></div>
+        <div class="square s6" id="23"></div>
+        <div class="square s7" id="31"></div>
+        <div class="square s8" id="32"></div>
+        <div class="square s9" id="33"></div>
+    </div>
+    <div class="whoTurn">
+
     </div>
     <div class="buttons">
-        <button class="srBtn">Start/Restart Game</button>
+        <button class="newGameBtn">New Game</button>
     </div>
+
     
 </body>
 </html>
